--- a/react-admin-dashboard-master/package.json
+++ b/react-admin-dashboard-master/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@mui/x-data-grid": "^5.17.2",
@@ -25,7 +26,9 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
+    "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
@@ -36,7 +39,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
