--- a/react-admin-dashboard-master/package.json
+++ b/react-admin-dashboard-master/package.json
@@ -12,8 +12,10 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
+    "@mui/styles": "^5.11.9",
     "@mui/x-data-grid": "^5.17.2",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.79.0",
@@ -25,16 +27,21 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
+    "concurrently": "^7.6.0",
     "formik": "^2.2.9",
+    "geohash": "^0.0.1",
     "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.2.5",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-sizeme": "^3.0.1",
+    "recharts": "^2.0.9",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
